Fix for painting problems in embedding apps when window is moved offscreen and back on. b=78412 r=ccarlen@netscape.com sr=blizzard@mozilla.org