embedding/browser/webBrowser/nsWebBrowser.h
@@ -49,10 +49,6 @@
 #include "nsIWebBrowserPrint.h"
 #include "nsIWindowWatcher.h"
 
-// for painting the background window
-#include "nsIDeviceContext.h"
-#include "nsIRenderingContext.h"
-
 #include "nsVoidArray.h"
 #include "nsWeakPtr.h"
 
@@ -123,8 +119,6 @@ protected:
     NS_IMETHOD BindListener(nsISupports *aListener, const nsIID& aIID);
     NS_IMETHOD UnBindListener(nsISupports *aListener, const nsIID& aIID);
 
-    NS_IMETHOD FillBackground(const nsRect &aRect);
-
     static nsEventStatus PR_CALLBACK HandleEvent(nsGUIEvent *aEvent);
 
 protected:
@@ -144,9 +138,7 @@ protected:
    nsIWebBrowserPersistProgress *mProgressListener;
    nsCOMPtr<nsIWebProgress>      mWebProgress;
 
-   // so that we can draw when we get expose events
-   nsCOMPtr<nsIRenderingContext> mRC;
-   nsCOMPtr<nsIDeviceContext>    mDC;
+   // cached background color
    nscolor                       mBackgroundColor;
 
    //Weak Reference interfaces...
